# yocto

./: CMakeLists.txt
appsrc/: sample_app.c
include/app/: sample_app.h
lib/: CMakeLists.txt  add.c  sub.c
